# pytest-clean-database

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
pytest_clean_db/: adapters.py  connection.py  plugin.py  queries.py
pytest_clean_db/dialect/: mysql.py  postgres.py
src/pytest_clean_db/: connection.py
tests/: conftest.py  test_connection.py  test_dialects.py  test_mysql.py  test_plugin.py  test_postgres.py
